fixed skill list overflow on mobile view

--- a/css/style.scss
+++ b/css/style.scss
@@ -199,6 +199,9 @@ nav {
   #skills {
     display: flex;
     justify-content: space-around;
+    ul {
+      padding-left: 20px;
+    }
   }
 }
 
